--- a/app/scss/abstracts/_helpers.scss
+++ b/app/scss/abstracts/_helpers.scss
@@ -1,4 +1,3 @@
-
 .noscroll {
 	overflow: hidden;
 }
@@ -8,9 +7,9 @@
 }
 
 .full-width-on-mobile {
-    @include breakpoint-down(small){
-        width: 100%;
-    }
+	@include breakpoint-down(small) {
+		width: 100%;
+	}
 }
 
 // Visibility
@@ -30,36 +29,18 @@
 	color: white;
 }
 
-
 .block-at-tablet {
-	@include breakpoint-up(medium){
+	@include breakpoint-up(medium) {
 		display: block;
 	}
 }
 
-.heading {
-	font-weight: 800;
-	font-size: 32px;
-	line-height: 40px;
-	@include breakpoint-up(large){
-		font-size: 56px;
-		line-height: 64px;
-	}
+// TYPOGRAPHY
 
-	&--hero {
-		margin: 3.5rem 0 1.5rem 0;
-		font-size: $font-lg; 
-		line-height: 2.5rem;
-		
-		@include breakpoint-up(medium){
-			line-height: 3.5rem;
-			font-size: $font-xlg;
-		}
-		@include breakpoint-up(large){
-			line-height: 5.5rem;
-			font-size: $font-jumbo;
-		}
-	}
+.heading-2 {
+	font-weight: 700;
+	font-size: $font-heading-2;
+	line-height: $line-height-heading-2;
 }
 
 // Spacing
@@ -67,22 +48,11 @@
 	margin: 0 auto;
 	max-width: 90rem; // 1440px for desktop
 
-	// max-width: calc(100% - 3rem);
-	// @include breakpoint-up(medium) {
-	// 	max-width: calc(100% - 5rem);
-	// }
-	// @include breakpoint-up(large) {
-	// 	max-width: calc(min(100% - 5rem, 69.375rem));
-	// }
-
 	&--pall {
 		padding: $mobile;
 
 		@include breakpoint-up(medium) {
 			padding: $tablet;
-		}
-		@include breakpoint-up(large) {
-			padding: $desktop;
 		}
 	}
 	&--py {
@@ -93,22 +63,14 @@
 			padding-top: $tablet;
 			padding-bottom: $tablet;
 		}
-		@include breakpoint-up(large) {
-			padding-top: $desktop;
-			padding-bottom: $desktop;
-		}
 	}
 	&--px {
 		padding-right: $mobile;
 		padding-left: $mobile;
 
-        @include breakpoint-up(medium) {
+		@include breakpoint-up(medium) {
 			padding-right: $tablet;
 			padding-left: $tablet;
-		}
-		@include breakpoint-up(large) {
-			padding-right: $desktop;
-			padding-left: $desktop;
 		}
 	}
 	&--pt {
@@ -123,18 +85,11 @@
 	}
 	&--pb {
 		padding-bottom: $mobile;
-
-		@include breakpoint-up(large) {
-			padding-bottom: $desktop;
-		}
 	}
 	&--pl {
 		padding-left: $mobile;
 		@include breakpoint-up(medium) {
 			padding-left: $tablet;
-		}
-		@include breakpoint-up(xlarge) {
-			padding-left: $desktop;
 		}
 	}
 }
