--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -1,27 +1,48 @@
 // Colors
 $black: rgb(0, 0, 0);
-$gray: rgb(8, 8, 8);
-$light-gray: rgb(229, 299, 299);
-$very-light-gray: rgb(243, 243, 243);
+$gray: #7d7d7d;
+$light-gray: #353535;
+$very-light-gray: #f3f3f3;
 $white: rgb(255, 255, 255);
 
-// Typography
-$font-sm: 0.75rem; // 12px
-$font-med: 0.9375rem; // 15px
-$font-reg: 1rem;
-$font-xreg: 1.125rem; // 18px
-// $font-lg: 1.5rem; // 24px
-$font-lg: 2.5rem; // 40px
-// $font-xlg: 3.125rem; // 50px
-$font-xlg: 3.5rem; // 56px
-$font-jumbo: 5rem; // 80px
-// $font-jumbo: calc(min(10vw + 0.625rem, 7.5rem));
+// TYPOGRAPHY
+$font-body: 14px;
+$line-height-body: 28px;
+
+$font-link-1: 12px;
+$line-height-link-1: 15px;
+$letter-spacing-link-1: 2.5px;
+
+$font-link-2: 9px;
+$line-height-link-2: 11px;
+$letter-spacing-link-2: 2px;
+
+$font-subhead-1: 9px;
+$line-height-subhead-1: 11px;
+$letter-spacing-subhead-1: 2px;
+
+$font-subhead-1: 15px;
+$line-height-subhead-1: 19px;
+
+$font-subhead-2: 13px;
+$line-height-subhead-2: 17px;
+
+$font-heading-1: 56px;
+$line-height-heading-1: 64px;
+
+$font-heading-2: 24px;
+$line-height-heading-2: 29px;
+
+$font-heading-3: 18px;
+$line-height-heading-3: 22px;
+
+$font-display: 200px;
+$line-height-display: 150px;
 
 // Font Families
-$serif: 'Libre Baskerville', serif;
-// $public: "Public Sans", sans-serif;
+$serif: "Libre Baskerville", serif;
 
 // Container Padding
 $mobile: 1.5rem; //24
 $tablet: 2.5rem; //40
-$desktop: 10.3125rem; //165
+// $desktop: 10.3125rem; //165
