--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -108,12 +108,6 @@ a {
   }
 }
 
-.heading-2 {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 29px;
-}
-
 .container {
   margin: 0 auto;
   max-width: 90rem;
@@ -208,6 +202,19 @@ a {
   align-items: center;
 }
 
+.heading-2 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  margin-bottom: 0.5rem;
+}
+
+.subhead-2 {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 17px;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -229,6 +236,35 @@ a {
 .header .slideshow-toggle:hover {
   color: black;
   cursor: pointer;
+}
+
+.thumbnail {
+  position: relative;
+  display: inline-block;
+  color: white;
+  margin-bottom: 1.5rem;
+  transition: opacity 150ms ease-in;
+}
+.thumbnail:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+.thumbnail__img-wrapper img {
+  display: block;
+}
+.thumbnail__text {
+  position: absolute;
+  bottom: 2rem;
+  left: 2rem;
+  max-width: 75%;
+}
+.thumbnail__mask {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 170px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
 }
 
 /*# sourceMappingURL=style.css.map */
