--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -225,13 +225,27 @@ a {
   height: 32px;
   width: 113px;
 }
+@media (min-width: 64em) {
+  .header .logo {
+    height: 48px;
+    width: 170px;
+  }
+}
 .header .slideshow-toggle {
   font-size: 9px;
+  letter-spacing: 2px;
+  line-height: 11px;
   font-weight: bold;
-  letter-spacing: 1.93px;
   color: #7d7d7d;
   text-transform: uppercase;
   transition: color 150ms ease-in;
+}
+@media (min-width: 48em) {
+  .header .slideshow-toggle {
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    line-height: 15px;
+  }
 }
 .header .slideshow-toggle:hover {
   color: black;
@@ -242,12 +256,15 @@ a {
   position: relative;
   display: inline-block;
   color: white;
-  margin-bottom: 1.5rem;
   transition: opacity 150ms ease-in;
+  vertical-align: middle;
 }
 .thumbnail:hover {
   cursor: pointer;
   opacity: 0.5;
+}
+.thumbnail:not(:last-child) {
+  margin-bottom: 1.5rem;
 }
 .thumbnail__img-wrapper img {
   display: block;
