add masonry layout with flexbox columns

--- a/app/scss/layout/_masonry.scss
+++ b/app/scss/layout/_masonry.scss
@@ -1,10 +1,22 @@
 .masonry-container {
     margin: 0 auto;
-
+    // column-count: 4;
+ 
     @include breakpoint-up(medium){
         column-count: 2;
     }
     @include breakpoint-up(xxlarge){
-        column-count: 4;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 1478px;
+        padding: 0 1.25rem 2.5rem 1.25rem;
+        // gap: 40px;
+        > div.thumbnail {
+            margin-top: 2.5rem;
+            margin-bottom: 0;
+            margin: 2.5rem 1.25rem 0 1.25rem;
+            width: 310px;
+        }
     }
 }
