--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -262,7 +262,17 @@ a {
 }
 @media (min-width: 86.0em) {
   .masonry-container {
-    column-count: 4;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 1478px;
+    padding: 0 1.25rem 2.5rem 1.25rem;
+  }
+  .masonry-container > div.thumbnail {
+    margin-top: 2.5rem;
+    margin-bottom: 0;
+    margin: 2.5rem 1.25rem 0 1.25rem;
+    width: 310px;
   }
 }
 
@@ -282,6 +292,7 @@ a {
 }
 .thumbnail__img-wrapper img {
   display: block;
+  max-width: 100%;
 }
 .thumbnail__text {
   position: absolute;
