starry night markup

--- a/app/scss/abstracts/_helpers.scss
+++ b/app/scss/abstracts/_helpers.scss
@@ -142,6 +142,11 @@
 	margin-bottom: 0.5rem;
 }
 
+.subhead-1 {
+	font-weight: 400;
+	font-size: $font-subhead-1;
+	line-height: $line-height-subhead-1;
+}
 .subhead-2 {
 	font-weight: 400;
 	font-size: $font-subhead-2;
