--- a/app/scss/abstracts/_globals.scss
+++ b/app/scss/abstracts/_globals.scss
@@ -20,3 +20,13 @@ a {
     text-decoration: none;
     color: $white;
 }
+img {
+    display: block;
+    max-width: 100%;
+}
+
+button {
+    border: none;
+    font-family: $serif;
+    cursor: pointer;
+}
