--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -232,6 +232,27 @@ button {
   line-height: 17px;
 }
 
+.link-2 {
+  color: #7d7d7d;
+  font-size: 9px;
+  line-height: 11px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.display-font {
+  font-size: 6.25rem;
+  line-height: 6.25rem;
+}
+@media (min-width: 48em) {
+  .display-font {
+    font-size: 200px;
+    line-height: 150px;
+  }
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -368,6 +389,23 @@ button {
   position: absolute;
   bottom: -0.75rem;
   left: 1rem;
+}
+.detail .description {
+  position: relative;
+  padding-top: 4.25rem;
+}
+.detail .description > * {
+  margin-bottom: 4.25rem;
+}
+.detail .description p {
+  font-weight: 700;
+}
+.detail .description .year {
+  position: absolute;
+  top: -0.5rem;
+  right: 0;
+  z-index: -1;
+  color: #f3f3f3;
 }
 
 /*# sourceMappingURL=style.css.map */
