--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,7 @@
 @import "layout/masonry";
 
 @import "components/thumbnail";
+@import "components/modal";
 @import "components/slideshow";
 
 @import "pages/detail";
