--- a/app/scss/abstracts/_animations.scss
+++ b/app/scss/abstracts/_animations.scss
@@ -1,49 +1,59 @@
 .has-fade {
+  visibility: hidden;
+}
+
+@keyframes fade-in {
+  from {
     visibility: hidden;
+    opacity: 0;
   }
-  
-  @keyframes fade-in {
-    from {
-      visibility: hidden;
-      opacity: 0;
-    }
-    1% {
-      visibility: visible;
-      opacity: 0;
-    }
-    to {
-      visibility: visible;
-      opacity: 1;
-    }
+  1% {
+    visibility: visible;
+    opacity: 0;
   }
-  .fade-in {
-    animation: fade-in 500ms ease-in-out forwards;
+  to {
+    visibility: visible;
+    opacity: 1;
   }
-  
-  @keyframes fade-out {
-    from {
-      visibility: visible;
-      opacity: 1;
-    }
-    99% {
-      visibility: visible;
-      opacity: 0;
-    }
-    to {
-      visibility: hidden;
-      opacity: 0;
-    }
+}
+.fade-in {
+  animation: fade-in 500ms ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
   }
-  .fade-out {
-    animation: fade-out 500ms ease-in-out forwards;
+  99% {
+    visibility: visible;
+    opacity: 0;
   }
-  
-  @keyframes fade {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  to {
+    visibility: hidden;
+    opacity: 0;
   }
-  
+}
+.fade-out {
+  animation: fade-out 500ms ease-in-out forwards;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+// slideshow progress bar
+
+@keyframes progressbar-countdown {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
