--- a/app/scss/components/_thumbnail.scss
+++ b/app/scss/components/_thumbnail.scss
@@ -10,6 +10,9 @@
     }
     &:not(:last-child) {
         margin-bottom: 1.5rem;
+        @include breakpoint-up(medium){
+            margin-bottom: 2.5rem;
+        }
     }
 
     &__text {
